...
    });

    // Handle form submission
    const onSubmit = async (data) => {
        try {
            await authAPI.login(data.email, data.password);
            // Alert.alert('Success', 'Login successful!');
            router.push('/home');
            reset();
        } catch (error) {
            console.error('Login error:', error);
            Alert.alert(
                'Login Failed', 
                error.response?.data || 'Login failed because of an error. Please try again.'
            );
        }
    };

    // The login form
    return (
        <View style={styles.container}>
            <View style={styles.column}>
                <Text style={styles.text}>Community Resource Center</Text>
                <Text style={styles.title}>Login to</Text>
                <Text style={styles.title}>Your Account</Text>
                    
                {/* Email Field */}
                <Controller
                    control={control}
                    name="email"
                    rules={{
...
                        <View>
                            <TextInput
                                style={[styles.textBox, errors.email && styles.inputError]}
                                onBlur={onBlur}
                                onChangeText={onChange}
                                value={value}
                                placeholder="user@example.com"
                                keyboardType="email-address"
                                autoCapitalize="none"
                                placeholderTextColor="gray"
                            />
                            {errors.email && (
                                <Text style={[styles.errorText, {marginTop: 15}]}>{errors.email.message}</Text>
...
                        <View>
                            <TextInput
                                style={[styles.textBox, errors.password && styles.inputError]}
                                onBlur={onBlur}
                                onChangeText={onChange}
                                value={value}
                                placeholder="Password"
                                secureTextEntry={true}
                                placeholderTextColor="gray"
                            />
                            {errors.password && (
                                <Text style={[styles.errorText, {marginTop: 15}]}>{errors.password.message}</Text>
                            )}
...
                {/* Forgot Password Link */}
                <TouchableOpacity>
                    <Text 
                        style={[styles.link, styles.rightAlign]}
                        onPress={() => router.push('/reset')}
                    >
                        Forgot Password?
                    </Text>
                </TouchableOpacity>

                {/* Login Button */}
                <Button
                    title="Login"
...
