...
                        tintColor={Colors.default.titlesSelected}
                    />
                }
            >
                <WelcomeBanner/>
                <Text style={styles.title}>
                    Order Status
                </Text>
                <OrderStatus
                    user={user}
                    orders={orders}
                    refreshOrders={refreshOrders}
                    onActiveOrderFound={setHasActiveOrder}
...
                <PreviousOrder user={user} orders={orders} refreshOrders={refreshOrders} />
            </ScrollView>

            {!hasActiveOrder && (
                <View style={styles.shadowContainer}>
                    <Button
                        title="Request a Device"
                        width={150}
                        height={50}
                        onPress={() => router.push('/request')}
                        textStyle={{ fontSize: 14 }}
                    />
                </View>
...
