...
            <Text style={styles.infoDetails}>Phone number</Text>
            <TextInput
                style={styles.textBox}
                value= {`${user.phone}`}
                editable={false}
            />
            <Text style={styles.infoDetails}>Reason</Text>
            <Dropdown
                data={reasons}
                placeholder={'Reason'}
                selectedValue={selectedReason}
                onSelect={(item) => setSelectedReason(typeof item === 'object' ? item.value : item)}
            />
            <Text style={styles.infoDetails}>Device</Text>
            <Dropdown
                data={deviceDropdownCount}
                placeholder={'Device'}
                selectedValue={selectedDevice}
                onSelect={(item) => setSelectedDevice(typeof item === 'object' ? item.value : item)}
            />
...
