...
                    title="Sign Up"
                    height={66}
                    onPress={handleSubmit(onSubmit)}
                />
                <View style={styles.row}>
                    <Text style={[styles.link, {color: Colors.default.textWhite}]}>
                        Already have an account?
                    </Text>

                    <TouchableOpacity onPress={() => router.push('/login')}>
                        <Text style={styles.link}>  Login</Text>
                    </TouchableOpacity>
                </View>
            </View>
        </View>
    );
}
...
