appId: host.exp.Exponent

# Test: Verify a user is able to reserve a tablet
---
#- launchApp

# Navigate to app in Expo Go
#- assertVisible: "community-connectivity-orlando"
#- tapOn: "community-connectivity-orlando"

# Step 1: Login to the App
# Login Screen
- assertVisible: "Login to"
- assertVisible: "Your Account"
- tapOn: "user@example.com"
- inputText: "bokoj26342@endibit.com"
- tapOn: "Password"
- inputText: "111111111"
- tapOn:
    point: "50%,51%" # Location of Login button
- tapOn: "OK"

# Step 2: Navigate to home page
# Home Screen
- assertVisible: "Order Status"

# Step 3: Click Request a device button
- assertVisible: "Home"
- tapOn: "Request a Device"

# Step 4: Enter details to request a device
# Change pickup location
- assertVisible: "Pickup details:"
# Select reason
- assertVisible: "Reason"
- tapOn: "Reason ▼"
- tapOn:
    point: "50%,49%" # Location of School option
# Select device
- assertVisible: "Device"
- tapOn: "Device ▼"
- tapOn:
    point: "50%,49%" # Location of Laptop option

# Step 5: Click Place Order button
- tapOn:
    point: "50%,84%" # Location of Place Order button

# Expected Results: 
# Reservation saved and details will be displayed in home page.
#- assertVisible: "Order Placed"
#- assertNotVisible: "Request a Device" # Button