appId: host.exp.exponent

# Test:  Verify user is able to reset password
---
#- launchApp

# Open app
#- assertVisible: "community-connectivity-orlando"
#- tapOn: "community-connectivity-orlando"

# Step 1: Navigate to login screen
- assertVisible: "Already have an account?"
- tapOn: "  Login"
- assertVisible: "Login to"
- assertVisible: "Your Account"

# Step 2: Click Forgot password. User is navigated to reset page
# Login Screen -> Reset Screen
- assertVisible: "Forgot Password?"
- tapOn: "Forgot Password?"

# Step 3: Enter details to reset password
# Reset Screen
- assertVisible: "Reset Password"
- tapOn: "user@example.com"
- inputText: # email address
- tapOn: "return"
- tapOn:
    point: "50%,72%" # Location of Send Reset Email button
- assertVisible: "Success"
- tapOn: "OK"
- extendedWaitUntil:
    notVisible: 
        text: 'OK'
    timeout: 80000

# Step 4: Navigate to login page and enter new password
# Login Screen
- assertVisible: "Login to"
- assertVisible: "Your Account"
- tapOn: "user@example.com"
- inputText: # email address
- tapOn: "Password"
- inputText: # password
- tapOn: "return"
- tapOn:
    point: "50%,51%" # Location of Login button

# Expected Results: 
# User is able to login with new password
- assertVisible: "Home"